--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<title></title>
 			<link rel="stylesheet" type="text/css" href="css/style.css">
 			<!-- <style type="text/css"></style> -->
+			<link rel="shortcut icon" type="image/png" href="images/rinat.png">
 			<script
 			  src="https://code.jquery.com/jquery-3.4.1.min.js"
 			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -21,7 +22,7 @@
 		<body>
 
 			<div id="p1"></div>
-			<h1 id="logo" >Rinat Sharifullin</h1>
+			<h1 id="logo" ><a href="other.html">Rinat Sharifullin</a></h1>
 			<p id="contentPics" >Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.
 			
 			Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
